--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'ND'
 - !lcsh 'Painting'
+- GITenberg
 tableOfContents: 'Whistler -- Chavannes, Millet, and Manet -- The failure of the nineteenth
   century -- Artistic education in France and England -- Ingres and Corot -- Monet,
   Sisley, Pissaro, and the decadence -- Our academicians -- The organisation of art
